--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "files.associations": {
     "sdl_main.h": "c",
-    "sdl.h": "c"
+    "sdl.h": "c",
+    "initializer_list": "c",
+    "utility": "c",
+    "xutility": "c",
+    "stdlib.h": "c"
   }
 }
