--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,19 @@
     "initializer_list": "c",
     "utility": "c",
     "xutility": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "chip8.h": "c",
+    "concepts": "c",
+    "cstddef": "c",
+    "cstdio": "c",
+    "cstdlib": "c",
+    "cstring": "c",
+    "cwchar": "c",
+    "numeric": "c",
+    "type_traits": "c",
+    "stdio.h": "c",
+    "string.h": "c",
+    "header.h": "c",
+    "CHIP8.H": "cpp"
   }
 }
